# cmakePractice

./: .gitignore  CMakeLists.txt  configure.sh  main.c  readme.md  run.sh
lib/gitlib/: CMakeLists.txt
lib/mylib/: CMakeLists.txt  adder.cpp  adder.h
src/: CMakeLists.txt  main.cpp
src/lib/mylib/: CMakeLists.txt
src/test/: CMakeLists.txt  main.cpp
